<resources>
    <string name="app_name">My Self Apps</string>

    //navigation name
    <string name="title_home">Home</string>
    <string name="title_daily">Daily</string>
    <string name="title_galery">Galery</string>
    <string name="title_music">Media</string>
    <string name="title_profil">Profil</string>
    <string name="slide1_desc">Selamat datang diaplikasi ini.\n Semoga kamu dapat menikmati fitur-fitur yang tersedia di sini.</string>
    <string name="slide2_desc">Di sini kamu dapat melihat \n melihat aktivitas ku setiap hari. \n Mulai dari bangun tidur \n sampai malam hari.</string>
    <string name="slide3_desc">Kumupulan berbagai macam \n foto yang menarik \n tersedia disini. </string>
    <string name="slide4_desc">Lihat daftar music \n tervaforit disini. Selain itu juga \n ada video yang pastinya \n menarik</string>
    <string name="home_deskripsiDiri">Imam Dwi Cahyo merupkan \n salah satu mahasiswa di \n Universitas Komputer Indonesia. \n Mulai kuliah pada tahun 2016.</string>
    <string-array name="countries_arry">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
