<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_featured_play_list_black_24dp"
        android:title="@string/title_daily"/>

    <item
        android:id="@+id/navigation_galery"
        android:icon="@drawable/ic_photo_library_black_24dp"
        android:title="@string/title_galery"/>

    <item
        android:id="@+id/navigation_musicvideo"
        android:icon="@drawable/ic_music_note_black_24dp"
        android:title="@string/title_music"/>

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profil"/>

</menu>
